<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/idLinea"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/idLinea"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title"
            android:layout_marginStart="90dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/minutos"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/minutos"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>